# quantum_trader

./: .bandit  .clineignore  .coverage  .dockerignore  .env.ai_modules  .env.ai_os  .env.backup.20251210_225736  .env.backup.20251210_225847  .env.backup.20251210_234111  .env.backup_pre_api_fix  .env.backup_production  .env.backup_testnet  .env.emergency_backup  .env.ess  .env.example  .env.example.ai_integration  .env.production  .env.production.template  .env.quantumfond  .env.security  .env.template  .env.v3.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tmp_commits.txt  .tmp_create_pr.ps1  00_START_HERE_PRODUCTION_HYGIENE.md  10-zombiefix.conf  5_PHASE_RECOVERY_COMPLETE_2026-02-18.md  ACTION_PLAN_COMPLETE_SYSTEM_JAN1_2026.md  ADAPTIVE_LEVERAGE_USAGE_GUIDE.md  AGENT.md  AIOS_INTEGRATION_REPORT.md  AI_24_MODULES_WHERE_ARE_THEY.md  AI_4MODEL_ENSEMBLE_IMPLEMENTATION.md  AI_5MODEL_ENSEMBLE_COMPLETE_FEB16.md  AI_ACTIVE_POSITIONS_CONTROLLER_IMPLEMENTATION_FEB3.md  AI_ACTIVE_SLOTS_STRICT_ROTATION_DEPLOYED.md  (+2777 more)
.backup_pre_sprint2/: test_tier1_pipeline.py
.backup_pre_tier1/: train_nhits_v5.py  unified_agents.py  xgb_agent_v4.py  xgb_agent_v5_unified.py
.deploy/: ROLLBACK.sh  deploy_core_kernel.sh  gate_proof.py  gate_proof.sh  quantum_stream_recover.sh
.githooks/: pre-commit
.github/: BRANCH_STRATEGY.md  CI_CHAOS_EXIT_SAFETY.md  CODEOWNERS  GHCR_PAT.md  PULL_REQUEST_TEMPLATE.md  ci-trigger-20250924.txt  copilot-instructions.md  labels.md  pr-rerun-trigger.txt
.github_disabled_workflows/: nightly-dev-check.yml
.husky/: pre-commit
(+15886 files in other folders)
