[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
packages = ["backend"]
explicit_package_bases = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E402"]

[tool.ruff.isort]
known-first-party = ["backend","config","ai_engine"]

